                                                         -*- coding: utf-8 -*-
Changes with Apache 2.2.15

  *) mod_cache: correctly consider s-maxage in cacheability
     decisions.  [Dan Poirier]

  *) core: Return APR_EOF if request body is shorter than the length announced
     by the client. PR 33098 [ Stefan Fritsch <sf sfritsch.de>]

  *) mod_rewrite: Add scgi scheme detection.  [André Malo]

  *) mod_mime: Detect invalid use of MultiviewsMatch inside Location and
     LocationMatch sections.  PR 47754.  [Dan Poirier]

  *) ab, mod_ssl: Restore compatibility with OpenSSL < 0.9.7g. 
     [Guenter Knauf]

Changes with Apache 2.2.14

  *) SECURITY: CVE-2009-2699 (cve.mitre.org)
     Fixed in APR 1.3.9.  Faulty error handling in the Solaris pollset support
     (Event Port backend) which could trigger hangs in the prefork and event
     MPMs on that platform.  PR 47645.  [Jeff Trawick]

  *) SECURITY: CVE-2009-3095 (cve.mitre.org)
     mod_proxy_ftp: sanity check authn credentials.
     [Stefan Fritsch <sf fritsch.de>, Joe Orton]

  *) SECURITY: CVE-2009-3094 (cve.mitre.org)
     mod_proxy_ftp: NULL pointer dereference on error paths.
     [Stefan Fritsch <sf fritsch.de>, Joe Orton]

  *) mod_proxy_scgi: Backport from trunk. [André Malo]

  *) mod_ldap: Don't try to resolve file-based user ids to a DN when AuthLDAPURL
     has been defined at a very high level.  PR 45946.  [Eric Covener]

  *) htcacheclean: 19 ways to fail, 1 error message. Fixed. [Graham Leggett]

  *) mod_ldap: Bring the LDAPCacheEntries and LDAPOpCacheEntries
     usage() in synch with the manual and the implementation (0 and -1
     both disable the cache). [Eric Covener]

  *) mod_ssl: The error message when SSLCertificateFile is missing should
     at least give the name or position of the problematic virtual host
     definition. [Stefan Fritsch sf sfritsch.de]

  *) htdbm: Fix possible buffer overflow if dbm database has very
     long values.  PR 30586 [Dan Poirier]
