@@ -87,11 +87,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
- * mod_rewrite: don't fully qualify hostname:port if the request is a CONNECT
-                request
-   Trunk Patch: http://svn.apache.org/viewvc?view=rev&revision=822004
-   2.2.x Patch: trunk patch works
-   +1: sf, minfrin, covener
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
